--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.10"
 dependencies = [
     "click>=8.1",
     "watchdog>=3.0",
+    "keyring>=25.6.0",
+    "pycryptodome>=3.14.0"
 ]
 
 [project.scripts]
