--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ dependencies = [
     "click>=8.1",
     "watchdog>=3.0",
     "keyring>=25.6.0",
-    "pycryptodome>=3.14.0",
-    "pyperclip>=1.8.2",
+    "pycryptodome>=3.14.0"
 ]
 
 [project.scripts]
