--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ dependencies = [
     "click>=8.1",
     "watchdog>=3.0",
     "keyring>=25.6.0",
-    "pycryptodome>=3.14.0"
+    "pycryptodome>=3.14.0",
+    "pydantic>=2.10",
 ]
 
 [project.scripts]
